--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "token": "NzQ5NTQyMTI2OTI0MzMzMDY3.X0tfgA.Vd5OxlHda21d6wM9oe6cQconjGc",
-    "prefix": "kl-"
+    "token": "Your Bot Token",
+    "prefix": "Your Bot Prefix"
 }
